Refactor `AbstractCompilerMojo` by moving part of the `compile` method body in a separated class. The intend is to reduce the complexity by splitting one big method into smaller methods. It may also help external applications (e.g. IDE) to use `ToolExecutor` in their environment.